fix delete scrollbar in firefox

--- a/app/scss/_global_style.scss
+++ b/app/scss/_global_style.scss
@@ -3,6 +3,6 @@
 	background: transparent;
 }
 
--moz-scrollbar {
+::-moz-scrollbar {
 	display: none;
 }
